--- a/index.html
+++ b/index.html
@@ -1135,8 +1135,8 @@ poverty, and war.</h1>
 	</div>
 
 	<div class="footer-item" id="footer-address">
-		<p><a href="/cdn-cgi/l/email-protection#5c3f3332283d3f281c342e3a72332e3b"><span class="__cf_email__" data-cfemail="83e0ecedf7e2e0f7c3ebf1e5adecf1e4">[email&#160;protected]</span></a></p>
-		<p><a href="/cdn-cgi/l/email-protection#b7c7c5d2c4c4f7dfc5d199d8c5d0"><span class="__cf_email__" data-cfemail="38484a5d4b4b78504a5e16574a5f">[email&#160;protected]</span></a></p>
+		<p><a href="/cdn-cgi/l/email-protection#c2a1adacb6a3a1b682aab0a4ecadb0a5"><span class="__cf_email__" data-cfemail="5e3d31302a3f3d2a1e362c3870312c39">[email&#160;protected]</span></a></p>
+		<p><a href="/cdn-cgi/l/email-protection#eb9b998e9898ab83998dc584998c"><span class="__cf_email__" data-cfemail="89f9fbecfafac9e1fbefa7e6fb">[email&#160;protected]</span>g</a></p>
 		<p><a href="tel:212-246-8486">+1 (212) 246-8486</a></p>
 	</div>
 
@@ -1264,7 +1264,7 @@ poverty, and war.</h1>
 					<div id="text-3" class="widget widget_text">			<div class="textwidget"><p>350 5th Ave #4202</p>
 <p>New York, NY 10118</p>
 <p>T: (212) 246-8486</p>
-<p><a href="/cdn-cgi/l/email-protection#8babe8e4e5ffeae8ffcbe3f9eda5e4f9ec"><span class="__cf_email__" data-cfemail="a4c7cbcad0c5c7d0e4ccd6c28acbd6c3">[email&#160;protected]</span></a></p>
+<p><a href="/cdn-cgi/l/email-protection#b191d2dedfc5d0d2c5f1d9c3d79fdec3d6"><span class="__cf_email__" data-cfemail="f3909c9d87929087b39b8195dd9c8194">[email&#160;protected]</span></a></p>
 </div>
 		</div>					
 				</div>
