--- a/index.html
+++ b/index.html
@@ -1135,8 +1135,8 @@ poverty, and war.</h1>
 	</div>
 
 	<div class="footer-item" id="footer-address">
-		<p><a href="/cdn-cgi/l/email-protection#e0838f8e94818394a0889286ce8f9287"><span class="__cf_email__" data-cfemail="cdaea2a3b9acaeb98da5bfabe3a2bfaa">[email&#160;protected]</span></a></p>
-		<p><a href="/cdn-cgi/l/email-protection#a9d9dbccdadae9c1dbcf87c6dbce"><span class="__cf_email__" data-cfemail="1b6b697e68685b73697d3574697c">[email&#160;protected]</span></a></p>
+		<p><a href="/cdn-cgi/l/email-protection#1b7874756f7a786f5b73697d3574697c"><span class="__cf_email__" data-cfemail="a5c6cacbd1c4c6d1e5cdd7c38bcad7c2">[email&#160;protected]</span></a></p>
+		<p><a href="/cdn-cgi/l/email-protection#c6b6b4a3b5b586aeb4a0e8a9b4a1"><span class="__cf_email__" data-cfemail="443436213737042c36226a2b36">[email&#160;protected]</span>g</a></p>
 		<p><a href="tel:212-246-8486">+1 (212) 246-8486</a></p>
 	</div>
 
@@ -1264,7 +1264,7 @@ poverty, and war.</h1>
 					<div id="text-3" class="widget widget_text">			<div class="textwidget"><p>350 5th Ave #4202</p>
 <p>New York, NY 10118</p>
 <p>T: (212) 246-8486</p>
-<p><a href="/cdn-cgi/l/email-protection#a080c3cfced4c1c3d4e0c8d2c68ecfd2c7"><span class="__cf_email__" data-cfemail="60030f0e14010314200812064e0f1207">[email&#160;protected]</span></a></p>
+<p><a href="/cdn-cgi/l/email-protection#9ebefdf1f0eafffdeadef6ecf8b0f1ecf9"><span class="__cf_email__" data-cfemail="0764686973666473476f756129687560">[email&#160;protected]</span></a></p>
 </div>
 		</div>					
 				</div>
