--- a/index.html
+++ b/index.html
@@ -1137,8 +1137,8 @@ poverty, and war.</h1>
 	</div>
 
 	<div class="footer-item" id="footer-address">
-		<p><a href="/cdn-cgi/l/email-protection#1675797862777562567e647038796471"><span class="__cf_email__" data-cfemail="d5b6babba1b4b6a195bda7b3fbbaa7b2">[email&#160;protected]</span></a></p>
-		<p><a href="/cdn-cgi/l/email-protection#7b0b091e08083b13091d5514091c"><span class="__cf_email__" data-cfemail="eb9b998e9898ab83998dc584998c">[email&#160;protected]</span></a></p>
+		<p><a href="/cdn-cgi/l/email-protection#fc9f9392889d9f88bc948e9ad2938e9b"><span class="__cf_email__" data-cfemail="a1c2cecfd5c0c2d5e1c9d3c78fced3c6">[email&#160;protected]</span></a></p>
+		<p><a href="/cdn-cgi/l/email-protection#255557405656654d57430b4a5742"><span class="__cf_email__" data-cfemail="423230273131022a30246c2d3025">[email&#160;protected]</span></a></p>
 		<p><a href="tel:212-246-8486">+1 (212) 246-8486</a></p>
 	</div>
 
@@ -1266,7 +1266,7 @@ poverty, and war.</h1>
 					<div id="text-3" class="widget widget_text">			<div class="textwidget"><p>350 5th Ave #4202</p>
 <p>New York, NY 10118</p>
 <p>T: (212) 246-8486</p>
-<p><a href="/cdn-cgi/l/email-protection#69490a06071d080a1d29011b0f47061b0e"><span class="__cf_email__" data-cfemail="23404c4d57424057634b51450d4c5144">[email&#160;protected]</span></a></p>
+<p><a href="/cdn-cgi/l/email-protection#dafab9b5b4aebbb9ae9ab2a8bcf4b5a8bd">conta<span class="__cf_email__" data-cfemail="1c7f685c746e7a32736e7b">[email&#160;protected]</span></a></p>
 </div>
 		</div>					
 				</div>
